[gd_scene load_steps=7 format=2]

[ext_resource path="res://scene/Moons/Moon.tscn" type="PackedScene" id=1]
[ext_resource path="res://scene/environment/GravityField.tscn" type="PackedScene" id=2]
[ext_resource path="res://scene/mice/Mouse.tscn" type="PackedScene" id=3]
[ext_resource path="res://scene/Levels/Level.gd" type="Script" id=4]
[ext_resource path="res://scene/Train/TrainControl.tscn" type="PackedScene" id=5]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -553, -767, 0, 0, 0, 0, 3210, -786, 0, 0, 0, 0, 3180, 2137, 0, 0, 0, 0, -545, 2147, 0, 0, 0, 0, -553, -767 )
}

[node name="Level" type="Node"]
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [ -2202.0, 3801.0 ],
"_edit_vertical_guides_": [ -1768.0, 4292.0 ]
}
mouse_scene = ExtResource( 3 )

[node name="GravityField" parent="." instance=ExtResource( 2 )]

[node name="Moon" parent="." instance=ExtResource( 1 )]
position = Vector2( 1280, 800 )

[node name="TrainControl" parent="Moon" instance=ExtResource( 5 )]

[node name="MousePath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MouseSpawnLocation" type="PathFollow2D" parent="MousePath"]
position = Vector2( -553, -767 )
rotate = false

[node name="MouseTimer" type="Timer" parent="."]

[connection signal="mouse_hit" from="Moon" to="." method="_on_Moon_mouse_hit"]
[connection signal="timeout" from="MouseTimer" to="." method="_on_MouseTimer_timeout"]
